--- a/Checador/Checador.csproj
+++ b/Checador/Checador.csproj
@@ -69,22 +69,29 @@
   <ItemGroup>
     <Compile Include="Controller\Ciudad_Ctl.cs" />
     <Compile Include="Controller\Departamento_Ctl.cs" />
+    <Compile Include="Controller\Direccion_Ctl.cs" />
+    <Compile Include="Controller\Empleado_Ctl.cs" />
     <Compile Include="Controller\Estado_Ctl.cs" />
     <Compile Include="Controller\Pais_Ctl.cs" />
     <Compile Include="Controller\Puesto_Ctl.cs" />
     <Compile Include="Controller\Sucursal_Ctl.cs" />
     <Compile Include="Controller\Usuario_Ctl.cs" />
     <Compile Include="Controller\VariablesGlobales_Ctl.cs" />
+    <Compile Include="Model\Banco_Mdl.cs" />
     <Compile Include="Model\Ciudad_Mdl.cs" />
     <Compile Include="Model\Clases\Ciudad_Cls.cs" />
     <Compile Include="Model\Clases\Conexion_Cls.cs" />
     <Compile Include="Model\Clases\Departamento_Cls.cs" />
+    <Compile Include="Model\Clases\Direccion_Cls.cs" />
+    <Compile Include="Model\Clases\Empleado_Cls.cs" />
     <Compile Include="Model\Clases\Estado_Cls.cs" />
     <Compile Include="Model\Clases\Pais_Cls.cs" />
     <Compile Include="Model\Clases\Puesto_Cls.cs" />
     <Compile Include="Model\Clases\Sucursal_Cls.cs" />
     <Compile Include="Model\Clases\Usuario_Cls.cs" />
     <Compile Include="Model\Departamento_Mdl.cs" />
+    <Compile Include="Model\Direccion_Mdl.cs" />
+    <Compile Include="Model\Empleado_Mdl.cs" />
     <Compile Include="Model\Estado_Mdl.cs" />
     <Compile Include="Model\Pais_Mdl.cs" />
     <Compile Include="Model\Puesto_Mdl.cs" />
@@ -113,6 +120,18 @@
     </Compile>
     <Compile Include="View\Catalogos\frmDepartamentos.Designer.cs">
       <DependentUpon>frmDepartamentos.cs</DependentUpon>
+    </Compile>
+    <Compile Include="View\Catalogos\frmEmpleado.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\Catalogos\frmEmpleado.Designer.cs">
+      <DependentUpon>frmEmpleado.cs</DependentUpon>
+    </Compile>
+    <Compile Include="View\Catalogos\frmEmpleados.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\Catalogos\frmEmpleados.Designer.cs">
+      <DependentUpon>frmEmpleados.cs</DependentUpon>
     </Compile>
     <Compile Include="View\Catalogos\frmEstado.cs">
       <SubType>Form</SubType>
@@ -216,6 +235,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="View\Catalogos\frmDepartamentos.resx">
       <DependentUpon>frmDepartamentos.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="View\Catalogos\frmEmpleado.resx">
+      <DependentUpon>frmEmpleado.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="View\Catalogos\frmEmpleados.resx">
+      <DependentUpon>frmEmpleados.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="View\Catalogos\frmEstado.resx">
       <DependentUpon>frmEstado.cs</DependentUpon>
