--- a/Checador/Checador.csproj
+++ b/Checador/Checador.csproj
@@ -67,35 +67,49 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controller\Banco_Ctl.cs" />
     <Compile Include="Controller\Ciudad_Ctl.cs" />
+    <Compile Include="Controller\Contrato_Ctl.cs" />
     <Compile Include="Controller\Departamento_Ctl.cs" />
     <Compile Include="Controller\Direccion_Ctl.cs" />
     <Compile Include="Controller\Empleado_Ctl.cs" />
     <Compile Include="Controller\Estado_Ctl.cs" />
+    <Compile Include="Controller\Jornada_Ctl.cs" />
+    <Compile Include="Controller\Metodo_Pago_Ctl.cs" />
     <Compile Include="Controller\Pais_Ctl.cs" />
     <Compile Include="Controller\Puesto_Ctl.cs" />
     <Compile Include="Controller\Sucursal_Ctl.cs" />
+    <Compile Include="Controller\Tipo_Salario_Ctl.cs" />
     <Compile Include="Controller\Usuario_Ctl.cs" />
     <Compile Include="Controller\VariablesGlobales_Ctl.cs" />
     <Compile Include="Model\Banco_Mdl.cs" />
     <Compile Include="Model\Ciudad_Mdl.cs" />
+    <Compile Include="Model\Clases\Banco_Cls.cs" />
     <Compile Include="Model\Clases\Ciudad_Cls.cs" />
     <Compile Include="Model\Clases\Conexion_Cls.cs" />
+    <Compile Include="Model\Clases\Contrato_Cls.cs" />
     <Compile Include="Model\Clases\Departamento_Cls.cs" />
     <Compile Include="Model\Clases\Direccion_Cls.cs" />
     <Compile Include="Model\Clases\Empleado_Cls.cs" />
     <Compile Include="Model\Clases\Estado_Cls.cs" />
+    <Compile Include="Model\Clases\Jornada_Cls.cs" />
+    <Compile Include="Model\Clases\Metodo_Pago_Cls.cs" />
     <Compile Include="Model\Clases\Pais_Cls.cs" />
     <Compile Include="Model\Clases\Puesto_Cls.cs" />
     <Compile Include="Model\Clases\Sucursal_Cls.cs" />
+    <Compile Include="Model\Clases\Tipo_Salario_Cls.cs" />
     <Compile Include="Model\Clases\Usuario_Cls.cs" />
+    <Compile Include="Model\Contrato_Mdl.cs" />
     <Compile Include="Model\Departamento_Mdl.cs" />
     <Compile Include="Model\Direccion_Mdl.cs" />
     <Compile Include="Model\Empleado_Mdl.cs" />
     <Compile Include="Model\Estado_Mdl.cs" />
+    <Compile Include="Model\Jornada_Mdl.cs" />
+    <Compile Include="Model\Metodo_Pago_Mdl.cs" />
     <Compile Include="Model\Pais_Mdl.cs" />
     <Compile Include="Model\Puesto_Mdl.cs" />
     <Compile Include="Model\Sucursal_Mdl.cs" />
+    <Compile Include="Model\Tipo_Salario_Mdl.cs" />
     <Compile Include="Model\Usuario_Mdl.cs" />
     <Compile Include="View\Catalogos\frmCiudad.cs">
       <SubType>Form</SubType>
